// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enumeration declaration Example 1 1`] = `
Object {
  "data": Object {
    "block": Array [
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "genericParameters": Array [
      Object {
        "data": Object {
          "id": "0",
          "name": Object {
            "id": "0",
            "name": "T",
          },
        },
        "type": "parameter",
      },
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "id": "0",
    "name": Object {
      "id": "0",
      "name": "add",
    },
    "parameters": Array [
      Object {
        "data": Object {
          "annotation": Object {
            "data": Object {
              "genericArguments": Array [],
              "id": "0",
              "identifier": Object {
                "id": "0",
                "isPlaceholder": false,
                "string": "T",
              },
            },
            "type": "typeIdentifier",
          },
          "defaultValue": Object {
            "data": Object {
              "id": "0",
            },
            "type": "none",
          },
          "id": "0",
          "localName": Object {
            "id": "0",
            "name": "a",
          },
        },
        "type": "parameter",
      },
      Object {
        "data": Object {
          "annotation": Object {
            "data": Object {
              "genericArguments": Array [],
              "id": "0",
              "identifier": Object {
                "id": "0",
                "isPlaceholder": false,
                "string": "T",
              },
            },
            "type": "typeIdentifier",
          },
          "defaultValue": Object {
            "data": Object {
              "expression": Object {
                "data": Object {
                  "id": "0",
                  "literal": Object {
                    "data": Object {
                      "id": "0",
                      "value": 0,
                    },
                    "type": "number",
                  },
                },
                "type": "literalExpression",
              },
              "id": "0",
            },
            "type": "value",
          },
          "id": "0",
          "localName": Object {
            "id": "0",
            "name": "b",
          },
        },
        "type": "parameter",
      },
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "returnType": Object {
      "data": Object {
        "genericArguments": Array [],
        "id": "0",
        "identifier": Object {
          "id": "0",
          "isPlaceholder": false,
          "string": "T",
        },
      },
      "type": "typeIdentifier",
    },
  },
  "type": "function",
}
`;

exports[`enumeration declaration Example 2 1`] = `
Object {
  "data": Object {
    "block": Array [
      Object {
        "data": Object {
          "expression": Object {
            "data": Object {
              "arguments": Array [
                Object {
                  "data": Object {
                    "expression": Object {
                      "data": Object {
                        "id": "0",
                        "identifier": Object {
                          "id": "0",
                          "isPlaceholder": false,
                          "string": "a",
                        },
                      },
                      "type": "identifierExpression",
                    },
                    "id": "0",
                    "label": "text",
                  },
                  "type": "argument",
                },
                Object {
                  "data": Object {
                    "id": "0",
                  },
                  "type": "placeholder",
                },
              ],
              "expression": Object {
                "data": Object {
                  "id": "0",
                  "identifier": Object {
                    "id": "0",
                    "isPlaceholder": false,
                    "string": "print",
                  },
                },
                "type": "identifierExpression",
              },
              "id": "0",
            },
            "type": "functionCallExpression",
          },
          "id": "0",
        },
        "type": "expression",
      },
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "genericParameters": Array [
      Object {
        "data": Object {
          "id": "0",
          "name": Object {
            "id": "0",
            "name": "T",
          },
        },
        "type": "parameter",
      },
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "id": "0",
    "name": Object {
      "id": "0",
      "name": "add",
    },
    "parameters": Array [
      Object {
        "data": Object {
          "annotation": Object {
            "data": Object {
              "genericArguments": Array [],
              "id": "0",
              "identifier": Object {
                "id": "0",
                "isPlaceholder": false,
                "string": "T",
              },
            },
            "type": "typeIdentifier",
          },
          "defaultValue": Object {
            "data": Object {
              "id": "0",
            },
            "type": "none",
          },
          "id": "0",
          "localName": Object {
            "id": "0",
            "name": "a",
          },
        },
        "type": "parameter",
      },
      Object {
        "data": Object {
          "annotation": Object {
            "data": Object {
              "genericArguments": Array [],
              "id": "0",
              "identifier": Object {
                "id": "0",
                "isPlaceholder": false,
                "string": "T",
              },
            },
            "type": "typeIdentifier",
          },
          "defaultValue": Object {
            "data": Object {
              "expression": Object {
                "data": Object {
                  "id": "0",
                  "literal": Object {
                    "data": Object {
                      "id": "0",
                      "value": 0,
                    },
                    "type": "number",
                  },
                },
                "type": "literalExpression",
              },
              "id": "0",
            },
            "type": "value",
          },
          "id": "0",
          "localName": Object {
            "id": "0",
            "name": "b",
          },
        },
        "type": "parameter",
      },
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "returnType": Object {
      "data": Object {
        "genericArguments": Array [],
        "id": "0",
        "identifier": Object {
          "id": "0",
          "isPlaceholder": false,
          "string": "T",
        },
      },
      "type": "typeIdentifier",
    },
  },
  "type": "function",
}
`;
